--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "srinivas dusa",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "2.0.20"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "body-parser": "^1.20.1",
+    "cors": "2.8.5",
+    "cros": "^1.0.1",
+    "express": "4.18.2",
     "heroku": "^7.67.1",
     "jsonwebtoken": "^8.5.1",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.4",
-    "body-parser": "^1.20.1",
-    "cros": "^1.0.1"
+    "sqlite3": "^5.1.4"
   }
 }
