--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "srinivas dusa",
   "license": "ISC",
@@ -15,7 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "heroku": "^7.67.1",
     "jsonwebtoken": "^8.5.1",
